Add time key test